Fix some spacing issues

--- a/front_end/src/app/hand/hand.component.css
+++ b/front_end/src/app/hand/hand.component.css
@@ -1,9 +1,3 @@
 .selected {
     background-color: #FFFFC7 !important;
 }
-.smearcard {
-    font-size: 4.0vw;
-}
-.smearcard_status {
-    font-size: 2.0vw;
-}
