--- a/front_end/src/assets/cards.css
+++ b/front_end/src/assets/cards.css
@@ -176,23 +176,11 @@
 }
 .playingCards .card.hearts.rank-10 .suit:after {
     word-spacing: -.05em;
-    letter-spacing: -.1em;
 }
 .playingCards .card.clubs.rank-10 .suit:after {
     word-spacing: -.15em;
 }
 
-/* 8, 9, 10 are the most crowded */
-.playingCards .card.rank-8 .suit:after,
-.playingCards .card.rank-9 .suit:after {
-    letter-spacing: -.075em;
-}
-.playingCards .card.rank-10 .suit:after {
-    letter-spacing: -.1em;
-}
-.playingCards .card.clubs .suit:after {
-    letter-spacing: -.125em;
-}
 
 /*____________ symbols in the middle (suits, full) ____________*/
 
