--- a/front_end/src/styles.css
+++ b/front_end/src/styles.css
@@ -6,7 +6,28 @@
     margin: 0 auto;
 }
 
+.small-padding {
+    padding-right: 7%;
+    padding-left: 7%;
+}
+
 body {
     margin: 10px;
 }
 
+.smearcard {
+    font-size: 4.0vw !important;
+}
+.smearcard_status {
+    font-size: 2.0vw !important;
+}
+
+.heading a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.heading a:hover {
+    color: inherit;
+    text-decoration: underline;
+}
